# Tracea

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  autotune.sh  bench_errors.txt  bench_root.py  benchmark_output.txt  benchmark_output_final.txt  benchmark_pytorch.py  benchmark_sanity_final.txt  benchmark_sanity_fixed.txt  build.err.txt  build.rs  build_err.txt  build_error.json  build_error.txt  build_log.txt  build_log_2.txt  build_output.txt  build_plain.txt  check.err.txt  check_error.txt  check_error_2.txt  check_errors.json  check_output.json  compile_err.txt  compile_errors.txt  compile_errors_2.txt  compile_round_3.txt  compile_round_4.txt  compile_round_5.txt  debug.py  debug_dump_flash_attention_v2_kernel.cubin  debug_dump_flash_attention_v2_kernel.ptx  debug_dump_gemm_kernel.ptx  debug_dump_gemm_mma_kernel.cubin  debug_dump_gemm_mma_kernel.ptx  (+33 more)
.tracea/: tuning_cache.json
benches/: metal_attention.rs  metal_gemm.rs  metal_gemm_configs.rs
benchmarks/: bench_fa2.py  bench_linear.py  comprehensive_bench.py  debug_bench.py  debug_fa2.py  graph_bench.py  inspect_full.py  masterpiece_bench.py  metal_compare.py  multi_obj_bench.py
doc/: ARCHITECTURE.md  OPTIMIZATION.md  PROGRESS.md
docs/: API_USAGE.md  ARCHITECTURE.md  BENCHMARK_REPORT.md  DEVELOPER_GUIDE.md  OPTIMIZATION.md  gemm_design.md  ttg_design.md
examples/: attention_demo.py  benchmark_compare.py  check_cuda.rs  check_device.rs  conv_bench.rs  cpu_bench.rs  debug_fa2_compile.rs  debug_launch.rs  demo.rs  diagnose_fa2.py  doctor_demo.rs  doctor_test.rs  elementwise_bench.rs  fa2_bench.rs  fa2_regression.py  fa2_verification.rs  fusion_demo.py  gemm_bench.rs  gemm_gpu_verify.rs  gemm_verification.rs  jit_conv_verify.py  jit_fa2_verify.py  low_rank_mlp_test.rs  metal_autotune.rs  metal_autotune_v2.rs  metal_compare_measure.rs  metal_dump_msl.rs  metal_metatune.rs  metal_tune.rs  metal_verify_tuned.rs  mini_verify_fa2.py  minimal_gpu_test.rs  nn_demo.py  policy_driven_gemm.rs  precise_bench.rs  python_demo.py  resnet_bench.rs  ttg_gemm_demo.rs  ttg_sparse_experiment.rs  verify_b64.rs  (+10 more)
include/: tracea.h  tracea.hpp
logs/: bench_log.txt  benchmark_1024.txt  benchmark_128tile_2.txt  benchmark_128x128_full.txt  benchmark_128x128_retry.txt  benchmark_128x64x3.txt  benchmark_64x64_v2.txt  benchmark_apex.txt  benchmark_apex_v2.txt  (+126 more)
(+217 files in other folders)
