[package]
name = "tracea"
version = "0.1.0"
edition = "2018"

[lib]
name = "tracea"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python", "cpp"]
python = ["dep:pyo3"]
cpp = []

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"], optional = true } # Ensure "extension-module" is enabled for building .pyd
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cudarc = { version = "=0.12.0", features = ["driver", "nvrtc", "cuda-11070"] }
libloading = "0.8"
